30_server-on-private-net/gateways.yaml
apiVersion: v1
kind: Gateway
metadata:
    name: gw30
    comment: Privateネットワークのゲートウェイ
    labels:
        case: 30
        role: gateway
spec:
    bindPublicIpAddress: 192.168.1.181      # パブリック側のIPアドレスでアクセスを許可
    internalServerName: srv30-bastion       # サーバーの名前
    internalVirtualNetwork: pri-net-bastion # 内部側の仮想ネットワーク
    remoteCIDR: 0.0.0.0/0                   # 接続を許すリモートのIPアドレス
    serverPorts:                            # リクエストを転送するポート番号のリストを以下に記述する
        - ssh                               # sshとhttpの通信を許可、それ以外は禁止    
        - http
